theres a bug where there will be some white space that comes after the last picture in the slide show. Spent the last three hours tryna fix this. its just gonna be a feature for my slideshow i guess. you get some white space after all the pictures before looping back.....how nice

--- a/styles/landingpage.css
+++ b/styles/landingpage.css
@@ -2,11 +2,6 @@ body{
   background-color: #292929;
 }
 
-.mainslider {
-  display: flex;
-}
-
-
 #title-div {
   display: flex;
   color: #fff;
@@ -14,13 +9,6 @@ body{
   opacity: 0.86;
   width:100%;
 }
-
-
-
-
-
-
-
 
 .owl-stage {
   display: -webkit-box;
